--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+
+    #Code for the navbar on the top of the screen
     <div class="content-navbar">
         <ul>
             <li><a id="navbar-home">Home</a></li>
